# python-selmakit

./: .gitignore  LICENSE  README.md  dashboard.py  gateway.py  pyproject.toml  setup.py  start.bat  start.sh
doc/: selmakit.md  session.md
examples/: weather_mcp.py
selmakit/: __init__.py  agent.py  capabilities.py  commands.py  config.py  cron.py  gateway.py  memory.py  message.py  pydantic_ai_chat.py  schedule.py  session.py  skills.py  tools.py  tracing.py  validation.py  workspace.py
selmakit/channels/: __init__.py  telegram.py  webchat.py
selmakit/dashboard/: __init__.py  app.py  config.py
