[project]
name = "selmakit"
version = "0.1.0"
description = "Minimal multi-channel agent framework built on pydantic-ai"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=14.15.0",
    "fastapi>=0.135.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "pydantic>=2.12.5",
    "pydantic-ai[duckduckgo,web-fetch]>=2.0.0b3",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "python-telegram-bot>=22.6",
    "httpx>=0.27",
    "streamlit>=1.0",
    "tzdata>=2025.1",
    "uvicorn[standard]>=0.41.0",
]

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
